flux/applications/base/netbox/netbox/netbox-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/part-of: netbox
  name: netbox
  namespace: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox
      app.kubernetes.io/part-of: netbox
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox
        app.kubernetes.io/part-of: netbox
    spec:
      enableServiceLinks: false
      restartPolicy: Always
      containers:
        - name: netbox
          image: ghcr.io/nielszy/netbox-with-plugins:v4.4.2-3.4.1
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: netbox.dev-cliip.test
              path: /login/
              port: http
            initialDelaySeconds: 25
            timeoutSeconds: 1
            successThreshold: 1
            periodSeconds: 30
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - mountPath: /opt/unit
              name: emptydir-netbox
            - mountPath: /opt/unit/tmp
              name: emptydir-netbox
            - mountPath: /etc/netbox/config
              name: netbox-config
              readOnly: true
            - name: netbox-media-files
              mountPath: /opt/netbox/netbox/media
            - name: netbox-scripts
              mountPath: /opt/netbox/netbox/scripts
            - name: netbox-overrides
              mountPath: /opt/netbox/launch-netbox.sh
              subPath: launch-netbox.sh
              readOnly: true
      volumes:
        - name: netbox-config
          projected:
            sources:
              - configMap:
                  name: netbox-config
                  items:
                    - key: configuration.py
                      path: configuration.py
                    - key: logging.py
                      path: logging.py
                    - key: plugins.py
                      path: plugins.py
              - secret:
                  name: netbox-extra-config
                  items:
                    - key: extra.py
                      path: extra.py
        - name: netbox-media-files
          persistentVolumeClaim:
            claimName: netbox-media-files
        - name: netbox-scripts
          persistentVolumeClaim:
            claimName: netbox-scripts
        - name: emptydir-netbox
          emptyDir:
            sizeLimit: 100Mi
        - name: netbox-overrides
          configMap:
            defaultMode: 511
            name: netbox-overrides
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
